[package]
name = "raws-mfa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-sdk-ssm = "1.37.0"
dirs = "5.0.1"
clap = { version = "4.5.7", features = ["derive"] }
rust-ini = "0.21.0"
strum = "0.26.3"
strum_macros = "0.26.3"